[package]
name = "syncify"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
trybuild = "1.0.89"

[dependencies]
futures = "0.3.30"
async-std = "1.12.0"
syn = { version = "2.0.48", features = ["extra-traits"] }
quote = "1.0.35"
